[gd_scene load_steps=4 format=3 uid="uid://565k83oati7o"]

[ext_resource type="Theme" uid="uid://b82xritf011af" path="res://UI/Remap Menu.tres" id="1_vym5b"]
[ext_resource type="Script" uid="uid://dgnhx6866x2mn" path="res://UI/accesibility_menu.gd" id="2_hy0vl"]
[ext_resource type="PackedScene" uid="uid://e38tmd3m041h" path="res://Toggle Switch.tscn" id="3_hy0vl"]

[node name="AccesibilityMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
mouse_default_cursor_shape = 3
theme = ExtResource("1_vym5b")
script = ExtResource("2_hy0vl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.5
offset_top = -126.0
offset_right = 334.5
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 3

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "VOLUME"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 3
theme = ExtResource("1_vym5b")
step = 2.0
value = 50.0
rounded = true
tick_count = 51
ticks_on_borders = true

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="VHS EFFECTS" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 3

[node name="Label" type="Label" parent="VBoxContainer/VHS EFFECTS"]
layout_mode = 2
size_flags_vertical = 1
mouse_default_cursor_shape = 3
text = "VHS EFFECTS"

[node name="Spacer" type="Label" parent="VBoxContainer/VHS EFFECTS"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 3
text = " "

[node name="VHS" parent="VBoxContainer/VHS EFFECTS" instance=ExtResource("3_hy0vl")]
layout_mode = 2
size_flags_horizontal = 10

[node name="STATIC ANIMATON" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 3

[node name="Label2" type="Label" parent="VBoxContainer/STATIC ANIMATON"]
layout_mode = 2
size_flags_vertical = 1
mouse_default_cursor_shape = 3
text = "STATIC ANIMATION"

[node name="Spacer" type="Label" parent="VBoxContainer/STATIC ANIMATON"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 3
text = " "

[node name="Satic" parent="VBoxContainer/STATIC ANIMATON" instance=ExtResource("3_hy0vl")]
layout_mode = 2
size_flags_horizontal = 10

[node name="TUTORIAL ON LAUNCH" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 3

[node name="Label2" type="Label" parent="VBoxContainer/TUTORIAL ON LAUNCH"]
layout_mode = 2
size_flags_vertical = 1
mouse_default_cursor_shape = 3
text = "TUTORIAL ON LAUNCH"

[node name="Spacer" type="Label" parent="VBoxContainer/TUTORIAL ON LAUNCH"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 3
text = " "

[node name="Tutorial" parent="VBoxContainer/TUTORIAL ON LAUNCH" instance=ExtResource("3_hy0vl")]
layout_mode = 2
size_flags_horizontal = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 3
text = " "

[node name="Save" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 3
text = "SAVE"

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 3
text = "RETURN"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -856.0
offset_top = 64.0
offset_right = 856.0
offset_bottom = 152.0
grow_horizontal = 2
mouse_default_cursor_shape = 3
theme_override_font_sizes/font_size = 100
text = "------- ACCESSIBILITY -------"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="state" from="VBoxContainer/VHS EFFECTS/VHS" to="." method="_on_vhs_state"]
[connection signal="state" from="VBoxContainer/STATIC ANIMATON/Satic" to="." method="_on_satic_state"]
[connection signal="state" from="VBoxContainer/TUTORIAL ON LAUNCH/Tutorial" to="." method="_on_tutorial_state"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
